Update font to Montserrat, add invite button in top app bar

--- a/web/app/assets/stylesheets/_variables.scss
+++ b/web/app/assets/stylesheets/_variables.scss
@@ -6,7 +6,7 @@ $brand-color-high-contrast: #0C0F0A;
 
 $border-color: #E1E1E1;
 
-$font-primary-family: 'Varela Round', sans-serif;
+$font-primary-family: 'Montserrat', sans-serif;
 $font-secondary-family: 'Roboto', sans-serif;
 
 $section-padding-phone: 20px;
