--- a/web/app/views/welcome/_invite.html.erb
+++ b/web/app/views/welcome/_invite.html.erb
@@ -57,7 +57,7 @@
     </div>
     <div class="invite__cta-group">
       <div class="invite__cta" onclick="showLoginButtons()">
-        Pegar convite
+        Quero um convite
       </div>
       <%= link_to new_user_session_path do %>
         <div class="invite__cta invite__cta--signin" title="Você precisa ter um convite válido!">
