Add push notification to new events

--- a/web/app/assets/stylesheets/_variables.scss
+++ b/web/app/assets/stylesheets/_variables.scss
@@ -1,3 +1,5 @@
+@import "welcome/media-queries";
+
 $brand-color: #03994C;
 $brand-color-aa: darken(#03994C, 5%);
 $brand-color-aaa: darken(#03994C, 10%);
