--- a/web/app/assets/stylesheets/application.scss
+++ b/web/app/assets/stylesheets/application.scss
@@ -74,6 +74,7 @@ $mdc-theme-primary: $brand-color;
 @import "@material/tab-scroller/mdc-tab-scroller";
 @import "@material/tab-indicator/mdc-tab-indicator";
 @import "@material/tab/mdc-tab";
+@import "@material/switch/mdc-switch";
 @import "template";
 @import "components/me-components";
 
