--- a/web/app/assets/stylesheets/components/me-feed.scss
+++ b/web/app/assets/stylesheets/components/me-feed.scss
@@ -20,12 +20,12 @@ $mdc-layout-grid-columns: (
   // }
 
   &__section {
-    margin: 0 auto 150px auto;
+    margin: 0 auto 124px auto;
     max-width: 960px;
     @include mdc-layout-grid-media-query_("phone") {
       max-width: unset;
-      padding: 35px 0 35px 0;
-      margin: 0 auto 26px auto;
+      padding: 24px 0 24px 0;
+      margin: 0 auto 12px auto;
     }
 
     &[data-section-load-more-loading="true"] {
@@ -97,6 +97,14 @@ $mdc-layout-grid-columns: (
           padding: 0 $section-padding-phone 0 0;
           margin: 0 (-$section-padding-phone) 0 0;
         }
+      }
+    }
+
+    &--without-margin {
+      padding: 0;
+      margin: 0 auto 12px auto;
+      @include mobile-only {
+        margin: 0  20px 12px 20px;
       }
     }
   }
