--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -49,8 +49,11 @@
 
   <%= Gon::Base.render_data %>
 
+  <script src="https://sdk.pushy.me/web/1.0.5/pushy-sdk.js"></script>
+
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
   <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
+
 
   <!-- Facebook Pixel Code -->
   <script>
@@ -96,18 +99,20 @@
 
 <%= yield %>
 
-<% if notice %>
-  <div data-controller="snackbar" class="me-snackbar mdc-snackbar">
-    <div class="mdc-snackbar__surface">
-      <div class="mdc-snackbar__label" role="status" aria-live="polite">
-        <%= notice %>
-      </div>
-      <div class="mdc-snackbar__actions">
-        <button class="mdc-icon-button mdc-snackbar__dismiss material-icons" title="Dismiss">close</button>
-      </div>
+
+<div data-controller="snackbar" class="me-snackbar mdc-snackbar">
+  <div class="mdc-snackbar__surface">
+    <div class="mdc-snackbar__label" role="status" aria-live="polite">
+      <%= notice %>
+    </div>
+    <div class="mdc-snackbar__actions">
+      <button class="mdc-icon-button mdc-snackbar__dismiss material-icons" title="Dismiss">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"/><path d="M18.3 5.71c-.39-.39-1.02-.39-1.41 0L12 10.59 7.11 5.7c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"/></svg>
+      </button>
     </div>
   </div>
-<% end %>
+</div>
+
 
 <%= render partial: 'layouts/footer' %>
 
