--- a/web/app/views/users/index.html.erb
+++ b/web/app/views/users/index.html.erb
@@ -13,6 +13,7 @@
       <th>Email</th>
       <th>Criado em</th>
       <th>Status</th>
+      <th>Notificações</th>
       <th>Beta</th>
       <th></th>
       <th></th>
@@ -31,6 +32,7 @@
           Requisitado: <%= user.beta_requested? ? 'Sim' : 'Não' %> <br>
           Ativado: <%= user.beta_activated? ? 'Sim' : 'Não' %>
         </td>
+        <td>Notificações: <%= user.notifications_topics_all_active %></td>
 <!--        <td><%#= link_to 'Show', user %></td>-->
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Tem certeza?' } %></td>
