--- a/web/app/views/feeds/_saves.html.erb
+++ b/web/app/views/feeds/_saves.html.erb
@@ -54,7 +54,7 @@
                 </div>
                 <a href="<%= event.url %>"
                    title="<%= event.details_name %>">
-                  <div class="mdc-card__media mdc-card__media--16-9 <%= 'lazy-bgimage' unless json_request  %>" data-src="<%= event.image[:feed].url unless json_request %>" style="<%= get_image_style_attr event, preload: json_request %>">
+                  <div class="mdc-card__media mdc-card__media--16-9" style="<%= get_image_style_attr event, preload: true %>">
                     <!-- <div class="mdc-card__media mdc-card__media--16-9 lazy-bgimage" data-src="<%#= event.image[:feed].url %>" style="<%#= get_image_style_attr event %>"> -->
                     <div class="me-card__overlay"
                          data-target="saves-events.overlay"></div>
