--- a/web/app/assets/stylesheets/components/me-card.scss
+++ b/web/app/assets/stylesheets/components/me-card.scss
@@ -323,7 +323,7 @@ $description-color: $font-secondary-color;
       display: flex;
       flex-direction: row;
       align-items: baseline;
-      height: 185px;
+      height: 420px;
       flex-wrap: wrap;
       justify-content: center;
       align-content: baseline;
@@ -337,14 +337,16 @@ $description-color: $font-secondary-color;
     }
 
     & .me-card__media {
-      width: 30%;
-      height: 120px;
+      width: 100%;
+      height: 370px;
       background-size: cover;
       background-position: center;
       border-radius: $media-border-radius;
       position: relative;
+      box-shadow: $media-box-shadow-large;
       @include mdc-layout-grid-media-query_("phone") {
-        width: 200px;
+        width: 100%;
+        height: 150px;
       }
     }
 
