--- a/web/app/assets/stylesheets/components/me-icon-button.scss
+++ b/web/app/assets/stylesheets/components/me-icon-button.scss
@@ -2,6 +2,26 @@
 
 $fill-color: #ffffff;
 
-.me-icon-button {
-  
+.me-icon-button.mdc-icon-button {
+  //
+  //.me-card--feed & {
+  //  padding: 2px;
+  //
+  //  & svg {
+  //    width: 26px;
+  //    height: 26px;
+  //    fill: #FFFFFF;
+  //    padding: 2px;
+  //    border-radius: 16px;
+  //  }
+  //}
+
+  //&--on {
+  //  .me-card--feed & {
+  //
+  //    & svg {
+  //      fill: #FFFFFF;
+  //    }
+  //  }
+  //}
 }
