--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -2,23 +2,51 @@
 
   <%= notice %>
 
-  <% content_for :meta_title, "Evento #{@event.details_name.gsub(/[^[0-9][$][-]\p{L}\p{M}*+ ]|[+]/i, '')} em Porto Alegre | Alegreme.com" %>
+  <% content_for :meta_title, "Evento #{@event.details_name.gsub(/[^[$][-]\p{L}\p{M}*+ ]|[+]/i, '')} em Porto Alegre | Alegreme.com" %>
   <% content_for :meta_description, strip_tags(limit_description_size(@event.details_description, 160)) %>
-  <% content_for :meta_image, @event.image[:original].url %>
+  <% content_for :meta_image, @event.image[:original].url(public: true) %>
   <% content_for :canonical_url, event_url(@event, format: :html) %>
   <% content_for :amp_url, event_url(@event, format: :amp) %>
 
   <script type="application/ld+json">
 {
+ "@context": "http://schema.org",
+ "@type": "BreadcrumbList",
+ "itemListElement":
+ [
+  {
+   "@type": "ListItem",
+   "position": 1,
+   "item":
+   {
+    "@id": "<%= city_events_url %>",
+    "name": "Eventos em Porto Alegre"
+    }
+  },
+  {
+   "@type": "ListItem",
+  "position": 2,
+  "item":
+   {
+     "@id": "<%= category_events_url(@event.categories_primary_name) %>",
+     "name": "<%= "Eventos em Porto Alegre na categoria #{@event.categories_primary_name.try(:capitalize)}" %>"
+   }
+  }
+ ]
+}
+</script>
+
+  <script type="application/ld+json">
+{
   "@context": "https://schema.org",
   "@type": "Event",
-  "name": "<%= @event.details_name.gsub(/[^[0-9][$][-]\p{L}\p{M}*+ ]/i, '') %>",
+  "name": "<%= @event.details_name.gsub(/[^[$][-]\p{L}\p{M}*+ ]/i, '') %>",
   "startDate": "<%= @event.ld_json.start_date %>",
   "endDate": "<%= @event.ld_json.end_date %>",
   "image": [
-    "<%= @event.image[:original].url %>"
+    "<%= @event.image[:original].url(public: true) %>"
    ],
-  "description": "<%= strip_tags(@event.details_description).gsub(/[^[0-9][$][-]\p{L}\p{M}*+ ]/i, '') %>",
+  "description": "<%= strip_tags(@event.details_description).gsub(/[^[$][-]\p{L}\p{M}*+ ]/i, '') %>",
   "url": "<%= event_path @event %>",
   "location": {
     "@type": "Place",
