--- a/web/app/views/layouts/_json_ld.html.erb
+++ b/web/app/views/layouts/_json_ld.html.erb
@@ -3,9 +3,9 @@
         "@type":       "Event",
         "name":        "<%= event.details_name.gsub(/[^[$][-]\p{L}\p{M}*+ ]/i, '') %>",
         "image":       [
-                           "<%= event.image[:original].url %>"
+                           "<%= event.image[:original].url(public: true) %>"
                        ],
-        "description": "<%= strip_tags(event.details_description).gsub(/[^[0-9][$][-]\p{L}\p{M}*+ ]/i, '') %>",
+        "description": "<%= strip_tags(event.details_description).gsub(/[^[$][-]\p{L}\p{M}*+ ]/i, '') %>",
         "url": "<%= event_path event %>",
         "startDate":   "<%= event.ld_json.start_date %>",
         "endDate":     "<%= event.ld_json.end_date %>",
