--- a/web/app/assets/stylesheets/components/me-card.scss
+++ b/web/app/assets/stylesheets/components/me-card.scss
@@ -321,6 +321,26 @@ $description-color: $font-secondary-color;
       }
     }
 
+    & .me-card__breadcrumb {
+      display: -webkit-box;
+      display: flex;
+      flex-direction: row;
+      margin: 0 0 12px 0;
+      text-transform: uppercase;
+      font-size: 11px;
+      @include mobile-only {
+        display: none;
+      }
+
+      & span {
+        padding: 0 12px;
+      }
+
+      & i {
+        font-style: normal;
+      }
+    }
+
     & .me-card__primary-section {
       color: $font-secondary-color;
 
@@ -333,7 +353,7 @@ $description-color: $font-secondary-color;
       display: flex;
       flex-direction: row;
       align-items: baseline;
-      height: 420px;
+      height: 450px;
       flex-wrap: wrap;
       justify-content: center;
       align-content: baseline;
