--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -55,7 +55,7 @@
                    locals:  {
                        items:      @items[:week],
                        title:      {
-                           principal: "Eventos acontecendo esta semana",
+                           principal: "Esta semana",
                            secondary: "Hoje (#{I18n.l(Date.today, format: :short)}) até #{I18n.l(Date.today + 7, format: :week)} (#{I18n.l(Date.today + 7, format: :short)})"
                        },
                        identifier: 'this-week',
