--- a/web/app/assets/stylesheets/components/me-filter.scss
+++ b/web/app/assets/stylesheets/components/me-filter.scss
@@ -30,6 +30,14 @@
       padding: 2px $section-padding-phone;
     }
 
+    &[data-target="chip.chipset filter.ocurrences"] {
+      & .mdc-chip {
+        @include desktop-only {
+          padding: 6px;
+        }
+      }
+    }
+
     & .material-icons {
       vertical-align: middle;
       padding: 0 6px 0 0;
