--- a/web/app/views/feeds/_float_menu.html.erb
+++ b/web/app/views/feeds/_float_menu.html.erb
@@ -12,19 +12,19 @@
     <!--        Salvos-->
     <!--      </div>-->
     <!--    </div>-->
-    <div class="me-float-menu__item" data-target="float-menu.item" data-action="click->float-menu#scrollTo" data-collection-identifier="saves">
-      <div class="me-float-menu__icon">
-        <i class="material-icons">
-          <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 62 62">
-            <defs/>
-            <path fill-rule="evenodd" d="M61.9999 31c0 17.1208-13.8791 30.9999-30.9999 30.9999C13.8792 61.9999 0 48.1208 0 31 0 13.8792 13.8792 0 31 0s30.9999 13.8792 30.9999 31zm-13.6836-7.8711c0 2.9426-2.3932 5.3281-5.3454 5.3281-2.9522 0-5.3454-2.3855-5.3454-5.3281s2.3932-5.3281 5.3454-5.3281c2.9522 0 5.3454 2.3855 5.3454 5.3281zm-23.8208 0c0 2.9426-2.3933 5.3281-5.3455 5.3281-2.9522 0-5.3454-2.3855-5.3454-5.3281s2.3932-5.3281 5.3454-5.3281c2.9522 0 5.3455 2.3855 5.3455 5.3281zm-6.5704 14.621c-3.032 1.5205-3.0313 1.5219-3.0306 1.5234l.0015.003.0034.0067.0079.0156.0205.0401c.0158.0305.0359.0687.0602.1141.0488.0907.1149.2103.1988.3546.1676.2882.4077.6775.7238 1.134.6292.9088 1.5775 2.1099 2.878 3.3139 2.6185 2.4243 6.7324 4.9088 12.4535 4.9088s9.835-2.4845 12.4535-4.9088c1.3005-1.204 2.2488-2.4051 2.878-3.3139.3161-.4565.5562-.8458.7238-1.134.0839-.1443.15-.2639.1988-.3546a8.407 8.407 0 00.0602-.1141l.0206-.0401.0078-.0156.0034-.0067.0015-.003c.0007-.0015.0015-.0029-3.0306-1.5234-3.032-1.5206-3.0313-1.5219-3.0306-1.5233l.0012-.0025.0023-.0045.0035-.0069.0028-.0056a5.1948 5.1948 0 01-.0971.1739c-.0873.1501-.2322.3869-.4363.6817-.4112.5939-1.0443 1.3964-1.9079 2.1959-1.7095 1.5827-4.2541 3.1054-7.8549 3.1054-3.6008 0-6.1454-1.5227-7.8549-3.1054-.8636-.7995-1.4967-1.602-1.9079-2.1959a10.3959 10.3959 0 01-.4362-.6817 5.039 5.039 0 01-.0867-.1541c-.0072-.0133-.0107-.0201-.0106-.0199l.0029.0057.0035.0069.0023.0045.0012.0025c.0007.0014.0014.0027-3.0306 1.5233z" clip-rule="evenodd"/>
-          </svg>
-        </i>
-      </div>
-      <div class="me-float-menu__label">
-        Salvos
-      </div>
-    </div>
+<!--    <div class="me-float-menu__item" data-target="float-menu.item" data-action="click->float-menu#scrollTo" data-collection-identifier="saves">-->
+<!--      <div class="me-float-menu__icon">-->
+<!--        <i class="material-icons">-->
+<!--          <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 62 62">-->
+<!--            <defs/>-->
+<!--            <path fill-rule="evenodd" d="M61.9999 31c0 17.1208-13.8791 30.9999-30.9999 30.9999C13.8792 61.9999 0 48.1208 0 31 0 13.8792 13.8792 0 31 0s30.9999 13.8792 30.9999 31zm-13.6836-7.8711c0 2.9426-2.3932 5.3281-5.3454 5.3281-2.9522 0-5.3454-2.3855-5.3454-5.3281s2.3932-5.3281 5.3454-5.3281c2.9522 0 5.3454 2.3855 5.3454 5.3281zm-23.8208 0c0 2.9426-2.3933 5.3281-5.3455 5.3281-2.9522 0-5.3454-2.3855-5.3454-5.3281s2.3932-5.3281 5.3454-5.3281c2.9522 0 5.3455 2.3855 5.3455 5.3281zm-6.5704 14.621c-3.032 1.5205-3.0313 1.5219-3.0306 1.5234l.0015.003.0034.0067.0079.0156.0205.0401c.0158.0305.0359.0687.0602.1141.0488.0907.1149.2103.1988.3546.1676.2882.4077.6775.7238 1.134.6292.9088 1.5775 2.1099 2.878 3.3139 2.6185 2.4243 6.7324 4.9088 12.4535 4.9088s9.835-2.4845 12.4535-4.9088c1.3005-1.204 2.2488-2.4051 2.878-3.3139.3161-.4565.5562-.8458.7238-1.134.0839-.1443.15-.2639.1988-.3546a8.407 8.407 0 00.0602-.1141l.0206-.0401.0078-.0156.0034-.0067.0015-.003c.0007-.0015.0015-.0029-3.0306-1.5234-3.032-1.5206-3.0313-1.5219-3.0306-1.5233l.0012-.0025.0023-.0045.0035-.0069.0028-.0056a5.1948 5.1948 0 01-.0971.1739c-.0873.1501-.2322.3869-.4363.6817-.4112.5939-1.0443 1.3964-1.9079 2.1959-1.7095 1.5827-4.2541 3.1054-7.8549 3.1054-3.6008 0-6.1454-1.5227-7.8549-3.1054-.8636-.7995-1.4967-1.602-1.9079-2.1959a10.3959 10.3959 0 01-.4362-.6817 5.039 5.039 0 01-.0867-.1541c-.0072-.0133-.0107-.0201-.0106-.0199l.0029.0057.0035.0069.0023.0045.0012.0025c.0007.0014.0014.0027-3.0306 1.5233z" clip-rule="evenodd"/>-->
+<!--          </svg>-->
+<!--        </i>-->
+<!--      </div>-->
+<!--      <div class="me-float-menu__label">-->
+<!--        Salvos-->
+<!--      </div>-->
+<!--    </div>-->
     <div class="me-float-menu__item" data-target="float-menu.item" data-action="click->float-menu#scrollTo" data-collection-identifier="new-today">
       <div class="me-float-menu__icon">
         <i class="material-icons">
@@ -32,7 +32,7 @@
         </i>
       </div>
       <div class="me-float-menu__label">
-        Recentes
+        Eventos novos
       </div>
     </div>
     <div class="me-float-menu__item" data-target="float-menu.item" data-action="click->float-menu#scrollTo" data-collection-identifier="this-week">
