--- a/web/app/assets/stylesheets/components/me-event-single.scss
+++ b/web/app/assets/stylesheets/components/me-event-single.scss
@@ -5,6 +5,15 @@
   &__similar {
     margin-top: 85px;
 
+    & .me-card__like-button {
+      bottom: -16px;
+      right: 4px;
+
+      & .me-icon-button.mdc-icon-button {
+        @include mdc-icon-button-size($width: 20px, $height: 20px, $padding: 12px);
+      }
+    }
+
     @include mdc-layout-grid-media-query_("phone") {
       margin-top: 125px;
     }
