--- a/web/app/assets/stylesheets/components/me-footer.scss
+++ b/web/app/assets/stylesheets/components/me-footer.scss
@@ -1,7 +1,7 @@
 @import "../_variables";
 
 .me-footer {
-  margin: 50px 0 0 0;
+  margin: 0;
   display: flex;
   justify-content: center;
   flex-direction: column;
