--- a/web/app/assets/stylesheets/components/me-similar.scss
+++ b/web/app/assets/stylesheets/components/me-similar.scss
@@ -64,8 +64,12 @@
     }
 
     & .me-card__like-button {
-      top: 0;
-      right: 0;
+      bottom: -16px;
+      right: 4px;
+
+      & .me-icon-button.mdc-icon-button {
+        @include mdc-icon-button-size($width: 20px, $height: 20px, $padding: 12px);
+      }
     }
 
     & .mdc-layout-grid__cell {
