--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -34,8 +34,8 @@
                    locals:  {
                        items:      @items[:new_today],
                        title:      {
-                           principal: "Adicionados nas últimas 24 horas",
-                           secondary: "Foram adicionados #{@items.dig(:new_today, :detail, :total_events_in_collection)} eventos hoje (#{I18n.l(Date.today, format: :short)}) que podem te interessar"
+                           principal: "Adicionados recentemente",
+                           secondary: "Foram adicionados #{@items.dig(:new_today, :detail, :total_events_in_collection)} eventos nas últimas 48 horas que podem te interessar"
                        },
                        identifier: 'new-today',
                        opts:       {
@@ -55,7 +55,7 @@
                    locals:  {
                        items:      @items[:week],
                        title:      {
-                           principal: "Esta semana",
+                           principal: "Acontecendo esta semana",
                            secondary: "Hoje (#{I18n.l(Date.today, format: :short)}) até #{I18n.l(Date.today + 7, format: :week)} (#{I18n.l(Date.today + 7, format: :short)})"
                        },
                        identifier: 'this-week',
