--- a/web/app/views/invite_mailer/send_invite_activation_link.html.erb
+++ b/web/app/views/invite_mailer/send_invite_activation_link.html.erb
@@ -154,7 +154,7 @@
                           <br><br>
                           2 - Acessar o <a href="https://www.alegreme.com"
                                            target="_blank"
-                                           style="font-family:'Cereal', Helvetica, Arial, sans-serif;font-weight:normal;padding:0;margin:0;text-align:left;line-height:1.3;text-decoration:none;color:#03994C;font-weight:300;"><b>website</b></a> ou baixar o
+                                           style="font-family:'Cereal', Helvetica, Arial, sans-serif;font-weight:normal;padding:0;margin:0;text-align:left;line-height:1.3;text-decoration:none;color:#03994C;font-weight:300;"><b>website</b></a> ou 
                           <a href="https://play.google.com/apps/testing/com.alegreme.app"
                              target="_blank"
                              style="font-family:'Cereal', Helvetica, Arial, sans-serif;font-weight:normal;padding:0;margin:0;text-align:left;line-height:1.3;text-decoration:none;color:#03994C;font-weight:300;"><b>baixar o aplicativo android na Play Store</b></a>.
