--- a/web/app/views/users/index.html.erb
+++ b/web/app/views/users/index.html.erb
@@ -12,6 +12,8 @@
       <th>Nome</th>
       <th>Email</th>
       <th>Criado em</th>
+      <th>Acesso em</th>
+      <th>Acessos</th>
       <th>Status</th>
       <th>Notificações</th>
       <th>Beta</th>
@@ -28,6 +30,8 @@
         <td><%= user.name %></td>
         <td><%= user.email %></td>
         <td><%= distance_of_time_in_words_to_now user.created_at %></td>
+        <td><%= distance_of_time_in_words_to_now user.current_sign_in_at if user.current_sign_in_at %></td>
+        <td><%= user.sign_in_count %></td>
         <td>
           Requisitado: <%= user.beta_requested? ? 'Sim' : 'Não' %> <br>
           Ativado: <%= user.beta_activated? ? 'Sim' : 'Não' %>
@@ -46,4 +50,3 @@
 
   <%= link_to 'New User', new_user_path %>
 </section>
-
