Adjust amp single event style

--- a/web/app/assets/stylesheets/amp/application.scss
+++ b/web/app/assets/stylesheets/amp/application.scss
@@ -102,6 +102,8 @@ a {
 .me-content {
   padding: 76px 18px 18px 24px;
   background: $background-color;
+  max-width: 500px;
+  margin: auto;
 
   & h1.title {
     font-family: "Varela Round", sans-serif;
