--- a/web/app/assets/stylesheets/components/me-notification.scss
+++ b/web/app/assets/stylesheets/components/me-notification.scss
@@ -22,7 +22,7 @@
     padding: 18px 0;
     box-shadow: none;
     @include mobile-only {
-      padding: 18px 0 0 0;
+      padding: 18px 0 6px 0;
     }
 
     & label span {
