--- a/web/app/views/users/index.html.erb
+++ b/web/app/views/users/index.html.erb
@@ -32,9 +32,12 @@
         <td><%= distance_of_time_in_words_to_now user.created_at %></td>
         <td><%= distance_of_time_in_words_to_now user.current_sign_in_at if user.current_sign_in_at %></td>
         <td><%= user.sign_in_count %></td>
-        <td>
-          Requisitado: <%= user.beta_requested? ? 'Sim' : 'Não' %> <br>
-          Ativado: <%= user.beta_activated? ? 'Sim' : 'Não' %>
+        <td style="width: 15%">
+          Beta requisitado: <%= user.beta_requested? ? 'Sim' : 'Não' %> <br>
+          Beta ativado: <%= user.beta_activated? ? 'Sim' : 'Não' %> <br>
+          Persona: <%= user.personas_assortment_finished? ? 'Sim' : 'Não' %> <br>
+          Eventos salvos: <%= user.saved_events.size %> <br>
+          Plataform Id: <%= user.social_plataform_id %>
         </td>
         <td>Notificações: <%= user.notifications_topics_all_active %></td>
 <!--        <td><%#= link_to 'Show', user %></td>-->
